Added prescription and appointment functionality
